greatspn/SOURCES/WN/SOURCE/CTL/CTLParser.output
   0  $accept : inizio $end

   1  inizio : CTLformula

   2  CTLformula : atomicProposition
   3             | LPARENT CTLformula RPARENT
   4             | CTLformula AND CTLformula
   5             | CTLformula OR CTLformula
   6             | NOT CTLformula
   7             | CTLformula IMPL CTLformula
   8             | E X CTLformula
   9             | E G CTLformula
  10             | E LQPARENT CTLformula U CTLformula RQPARENT
  11             | A X CTLformula
  12             | A F CTLformula
  13             | E F CTLformula
  14             | A G CTLformula
  15             | A LQPARENT CTLformula U CTLformula RQPARENT
  16             | ENABLED LPARENT VAR RPARENT

  17  atomicProposition : inequality
  18                    | boolvalue
  19                    | NDEADLOCK
  20                    | DEADLOCK

  21  boolvalue : TRUEv
  22            | FALSEv

  23  inequality : expression MINOR number_expr
  24             | expression MINOREQ number_expr
  25             | expression MAJOR number_expr
  26             | expression MAJOREQ number_expr
  27             | expression EQ number_expr
  28             | expression NEQ number_expr

  29  expression : LPARENT expression RPARENT
  30             | LPARENT number_expr RPARENT
  31             | term
  32             | expression PLUS expression
  33             | expression MINUS expression
  34             | expression TIMES expression
  35             | expression DIV expression

  36  term : number_expr TIMES VAR
  37       | number_expr DIV VAR
  38       | VAR

  39  number_expr : NUMBER
  40              | number_expr PLUS number_expr
  41              | number_expr MINUS number_expr
  42              | number_expr TIMES number_expr
  43              | number_expr DIV number_expr

state 0
	$accept : . inizio $end  (0)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	inizio  goto 12
	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 19


state 1
	number_expr : NUMBER .  (39)

	.  reduce 39


state 2
	term : VAR .  (38)

	.  reduce 38


state 3
	CTLformula : NOT . CTLformula  (6)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 20


state 4
	CTLformula : LPARENT . CTLformula RPARENT  (3)
	expression : LPARENT . expression RPARENT  (29)
	expression : LPARENT . number_expr RPARENT  (30)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 21
	term  goto 14
	number_expr  goto 22
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 23


state 5
	boolvalue : TRUEv .  (21)

	.  reduce 21


state 6
	boolvalue : FALSEv .  (22)

	.  reduce 22


state 7
	atomicProposition : DEADLOCK .  (20)

	.  reduce 20


state 8
	atomicProposition : NDEADLOCK .  (19)

	.  reduce 19


state 9
	CTLformula : ENABLED . LPARENT VAR RPARENT  (16)

	LPARENT  shift 24
	.  error


state 10
	CTLformula : E . X CTLformula  (8)
	CTLformula : E . G CTLformula  (9)
	CTLformula : E . LQPARENT CTLformula U CTLformula RQPARENT  (10)
	CTLformula : E . F CTLformula  (13)

	LQPARENT  shift 25
	G  shift 26
	X  shift 27
	F  shift 28
	.  error


state 11
	CTLformula : A . X CTLformula  (11)
	CTLformula : A . F CTLformula  (12)
	CTLformula : A . G CTLformula  (14)
	CTLformula : A . LQPARENT CTLformula U CTLformula RQPARENT  (15)

	LQPARENT  shift 29
	G  shift 30
	X  shift 31
	F  shift 32
	.  error


state 12
	$accept : inizio . $end  (0)

	$end  accept


state 13
	inequality : expression . MINOR number_expr  (23)
	inequality : expression . MINOREQ number_expr  (24)
	inequality : expression . MAJOR number_expr  (25)
	inequality : expression . MAJOREQ number_expr  (26)
	inequality : expression . EQ number_expr  (27)
	inequality : expression . NEQ number_expr  (28)
	expression : expression . PLUS expression  (32)
	expression : expression . MINUS expression  (33)
	expression : expression . TIMES expression  (34)
	expression : expression . DIV expression  (35)

	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIV  shift 36
	MINOR  shift 37
	MAJOR  shift 38
	MINOREQ  shift 39
	MAJOREQ  shift 40
	EQ  shift 41
	NEQ  shift 42
	.  error


state 14
	expression : term .  (31)

	.  reduce 31


state 15
	term : number_expr . TIMES VAR  (36)
	term : number_expr . DIV VAR  (37)
	number_expr : number_expr . PLUS number_expr  (40)
	number_expr : number_expr . MINUS number_expr  (41)
	number_expr : number_expr . TIMES number_expr  (42)
	number_expr : number_expr . DIV number_expr  (43)

	PLUS  shift 43
	MINUS  shift 44
	TIMES  shift 45
	DIV  shift 46
	.  error


state 16
	CTLformula : atomicProposition .  (2)

	.  reduce 2


state 17
	atomicProposition : inequality .  (17)

	.  reduce 17


state 18
	atomicProposition : boolvalue .  (18)

	.  reduce 18


state 19
	inizio : CTLformula .  (1)
	CTLformula : CTLformula . AND CTLformula  (4)
	CTLformula : CTLformula . OR CTLformula  (5)
	CTLformula : CTLformula . IMPL CTLformula  (7)

	OR  shift 47
	AND  shift 48
	IMPL  shift 49
	$end  reduce 1


state 20
	CTLformula : CTLformula . AND CTLformula  (4)
	CTLformula : CTLformula . OR CTLformula  (5)
	CTLformula : NOT CTLformula .  (6)
	CTLformula : CTLformula . IMPL CTLformula  (7)

	.  reduce 6


state 21
	inequality : expression . MINOR number_expr  (23)
	inequality : expression . MINOREQ number_expr  (24)
	inequality : expression . MAJOR number_expr  (25)
	inequality : expression . MAJOREQ number_expr  (26)
	inequality : expression . EQ number_expr  (27)
	inequality : expression . NEQ number_expr  (28)
	expression : LPARENT expression . RPARENT  (29)
	expression : expression . PLUS expression  (32)
	expression : expression . MINUS expression  (33)
	expression : expression . TIMES expression  (34)
	expression : expression . DIV expression  (35)

	PLUS  shift 33
	MINUS  shift 34
	TIMES  shift 35
	DIV  shift 36
	MINOR  shift 37
	MAJOR  shift 38
	MINOREQ  shift 39
	MAJOREQ  shift 40
	EQ  shift 41
	NEQ  shift 42
	RPARENT  shift 50
	.  error


state 22
	expression : LPARENT number_expr . RPARENT  (30)
	term : number_expr . TIMES VAR  (36)
	term : number_expr . DIV VAR  (37)
	number_expr : number_expr . PLUS number_expr  (40)
	number_expr : number_expr . MINUS number_expr  (41)
	number_expr : number_expr . TIMES number_expr  (42)
	number_expr : number_expr . DIV number_expr  (43)

	PLUS  shift 43
	MINUS  shift 44
	TIMES  shift 45
	DIV  shift 46
	RPARENT  shift 51
	.  error


state 23
	CTLformula : LPARENT CTLformula . RPARENT  (3)
	CTLformula : CTLformula . AND CTLformula  (4)
	CTLformula : CTLformula . OR CTLformula  (5)
	CTLformula : CTLformula . IMPL CTLformula  (7)

	OR  shift 47
	AND  shift 48
	RPARENT  shift 52
	IMPL  shift 49
	.  error


state 24
	CTLformula : ENABLED LPARENT . VAR RPARENT  (16)

	VAR  shift 53
	.  error


state 25
	CTLformula : E LQPARENT . CTLformula U CTLformula RQPARENT  (10)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 54


state 26
	CTLformula : E G . CTLformula  (9)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 55


state 27
	CTLformula : E X . CTLformula  (8)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 56


state 28
	CTLformula : E F . CTLformula  (13)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 57


state 29
	CTLformula : A LQPARENT . CTLformula U CTLformula RQPARENT  (15)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 58


state 30
	CTLformula : A G . CTLformula  (14)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 59


state 31
	CTLformula : A X . CTLformula  (11)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 60


state 32
	CTLformula : A F . CTLformula  (12)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 61


state 33
	expression : expression PLUS . expression  (32)

	NUMBER  shift 1
	VAR  shift 2
	LPARENT  shift 62
	.  error

	expression  goto 63
	term  goto 14
	number_expr  goto 15


state 34
	expression : expression MINUS . expression  (33)

	NUMBER  shift 1
	VAR  shift 2
	LPARENT  shift 62
	.  error

	expression  goto 64
	term  goto 14
	number_expr  goto 15


state 35
	expression : expression TIMES . expression  (34)

	NUMBER  shift 1
	VAR  shift 2
	LPARENT  shift 62
	.  error

	expression  goto 65
	term  goto 14
	number_expr  goto 15


state 36
	expression : expression DIV . expression  (35)

	NUMBER  shift 1
	VAR  shift 2
	LPARENT  shift 62
	.  error

	expression  goto 66
	term  goto 14
	number_expr  goto 15


state 37
	inequality : expression MINOR . number_expr  (23)

	NUMBER  shift 1
	.  error

	number_expr  goto 67


state 38
	inequality : expression MAJOR . number_expr  (25)

	NUMBER  shift 1
	.  error

	number_expr  goto 68


state 39
	inequality : expression MINOREQ . number_expr  (24)

	NUMBER  shift 1
	.  error

	number_expr  goto 69


state 40
	inequality : expression MAJOREQ . number_expr  (26)

	NUMBER  shift 1
	.  error

	number_expr  goto 70


state 41
	inequality : expression EQ . number_expr  (27)

	NUMBER  shift 1
	.  error

	number_expr  goto 71


state 42
	inequality : expression NEQ . number_expr  (28)

	NUMBER  shift 1
	.  error

	number_expr  goto 72


state 43
	number_expr : number_expr PLUS . number_expr  (40)

	NUMBER  shift 1
	.  error

	number_expr  goto 73


state 44
	number_expr : number_expr MINUS . number_expr  (41)

	NUMBER  shift 1
	.  error

	number_expr  goto 74


state 45
	term : number_expr TIMES . VAR  (36)
	number_expr : number_expr TIMES . number_expr  (42)

	NUMBER  shift 1
	VAR  shift 75
	.  error

	number_expr  goto 76


state 46
	term : number_expr DIV . VAR  (37)
	number_expr : number_expr DIV . number_expr  (43)

	NUMBER  shift 1
	VAR  shift 77
	.  error

	number_expr  goto 78


state 47
	CTLformula : CTLformula OR . CTLformula  (5)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 79


state 48
	CTLformula : CTLformula AND . CTLformula  (4)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 80


state 49
	CTLformula : CTLformula IMPL . CTLformula  (7)

	NUMBER  shift 1
	VAR  shift 2
	NOT  shift 3
	LPARENT  shift 4
	TRUEv  shift 5
	FALSEv  shift 6
	DEADLOCK  shift 7
	NDEADLOCK  shift 8
	ENABLED  shift 9
	E  shift 10
	A  shift 11
	.  error

	expression  goto 13
	term  goto 14
	number_expr  goto 15
	atomicProposition  goto 16
	inequality  goto 17
	boolvalue  goto 18
	CTLformula  goto 81


state 50
	expression : LPARENT expression RPARENT .  (29)

	.  reduce 29


state 51
	expression : LPARENT number_expr RPARENT .  (30)

	.  reduce 30


state 52
	CTLformula : LPARENT CTLformula RPARENT .  (3)

	.  reduce 3


state 53
	CTLformula : ENABLED LPARENT VAR . RPARENT  (16)

	RPARENT  shift 82
	.  error


state 54
	CTLformula : CTLformula . AND CTLformula  (4)
	CTLformula : CTLformula . OR CTLformula  (5)
	CTLformula : CTLformula . IMPL CTLformula  (7)
	CTLformula : E LQPARENT CTLformula . U CTLformula RQPARENT  (10)

	OR  shift 47
	AND  shift 48
	U  shift 83
	IMPL  shift 49
	.  error


state 55
	CTLformula : CTLformula . AND CTLformula  (4)
	CTLformula : CTLformula . OR CTLformula  (5)
	CTLformula : CTLformula . IMPL CTLformula  (7)
	CTLformula : E G CTLformula .  (9)

	OR  shift 47
	AND  shift 48
	IMPL  shift 49
	$end  reduce 9
	RPARENT  reduce 9
	RQPARENT  reduce 9
	U  reduce 9


state 56
	CTLformula : CTLformula . AND CTLformula  (4)
	CTLformula : CTLformula . OR CTLformula  (5)
	CTLformula : CTLformula . IMPL CTLformula  (7)
	CTLformula : E X CTLformula .  (8)

	OR  shift 47
	AND  shift 48
	IMPL  shift 49
	$end  reduce 8
	RPARENT  reduce 8
	RQPARENT  reduce 8
	U  reduce 8


state 57
	CTLformula : CTLformula . AND CTLformula  (4)
	CTLformula : CTLformula . OR CTLformula  (5)
	CTLformula : CTLformula . IMPL CTLformula  (7)
	CTLformula : E F CTLformula .  (13)

	OR  shift 47
	AND  shift 48
	IMPL  shift 49
	$end  reduce 13
	RPARENT  reduce 13
	RQPARENT  reduce 13
	U  reduce 13


state 58
	CTLformula : CTLformula . AND CTLformula  (4)
	CTLformula : CTLformula . OR CTLformula  (5)
	CTLformula : CTLformula . IMPL CTLformula  (7)
	CTLformula : A LQPARENT CTLformula . U CTLformula RQPARENT  (15)

	OR  shift 47
	AND  shift 48
	U  shift 84
	IMPL  shift 49
	.  error

